# dorito

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci-tests.yml  ci.yml  docs.yml  tests.yml
docs/: api.md  index.md
docs/api/: bases.md  index.html  index.md  misc.md  model_fits.md  models.md  plotting.md  stats.md
docs/api/bases/: index.html
docs/api/misc/: index.html
docs/api/model_fits/: index.html
docs/api/models/: index.html
docs/api/plotting/: index.html
docs/api/stats/: index.html
docs/examples/: image_plane_fitting.md
docs/examples/image_plane_fitting/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/docs/api/model_fits/: index.html
site/docs/api/plotting/: index.html
site/docs/examples/image_plane_fitting/: index.html
site/search/: search_index.json
site/src/dorito/: __init__.py  models.py  stats.py
site/src/dorito.egg-info/: PKG-INFO
site/tests/: test_model_fits.py
src/dorito/: __init__.py  bases.py  build_model.py  misc.py  model_fits.py  models.py  plotting.py  stats.py  wavelets.py
src/dorito.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_bases.py  test_imports.py  test_misc.py  test_model_fits_smoke.py  test_models.py  test_stats.py
